; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlegacy/extr_3945.c_il3945_txq_ctx_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlegacy/extr_3945.c_il3945_txq_ctx_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.il_priv = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [25 x i8] c"Tx %d queue init failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.il_priv*)* @il3945_txq_ctx_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @il3945_txq_ctx_reset(%struct.il_priv* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.il_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.il_priv* %0, %struct.il_priv** %3, align 8
  %6 = load %struct.il_priv*, %struct.il_priv** %3, align 8
  %7 = call i32 @il3945_hw_txq_ctx_free(%struct.il_priv* %6)
  %8 = load %struct.il_priv*, %struct.il_priv** %3, align 8
  %9 = call i32 @il_alloc_txq_mem(%struct.il_priv* %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* %2, align 4
  br label %47

14:                                               ; preds = %1
  %15 = load %struct.il_priv*, %struct.il_priv** %3, align 8
  %16 = call i32 @il3945_tx_reset(%struct.il_priv* %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  br label %43

20:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %21

21:                                               ; preds = %38, %20
  %22 = load i32, i32* %5, align 4
  %23 = load %struct.il_priv*, %struct.il_priv** %3, align 8
  %24 = getelementptr inbounds %struct.il_priv, %struct.il_priv* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp slt i32 %22, %26
  br i1 %27, label %28, label %41

28:                                               ; preds = %21
  %29 = load %struct.il_priv*, %struct.il_priv** %3, align 8
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @il_tx_queue_init(%struct.il_priv* %29, i32 %30)
  store i32 %31, i32* %4, align 4
  %32 = load i32, i32* %4, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %28
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @IL_ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %35)
  br label %43

37:                                               ; preds = %28
  br label %38

38:                                               ; preds = %37
  %39 = load i32, i32* %5, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %5, align 4
  br label %21

41:                                               ; preds = %21
  %42 = load i32, i32* %4, align 4
  store i32 %42, i32* %2, align 4
  br label %47

43:                                               ; preds = %34, %19
  %44 = load %struct.il_priv*, %struct.il_priv** %3, align 8
  %45 = call i32 @il3945_hw_txq_ctx_free(%struct.il_priv* %44)
  %46 = load i32, i32* %4, align 4
  store i32 %46, i32* %2, align 4
  br label %47

47:                                               ; preds = %43, %41, %12
  %48 = load i32, i32* %2, align 4
  ret i32 %48
}

declare dso_local i32 @il3945_hw_txq_ctx_free(%struct.il_priv*) #1

declare dso_local i32 @il_alloc_txq_mem(%struct.il_priv*) #1

declare dso_local i32 @il3945_tx_reset(%struct.il_priv*) #1

declare dso_local i32 @il_tx_queue_init(%struct.il_priv*, i32) #1

declare dso_local i32 @IL_ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
